# pali_grammar

./: .gitignore  LICENSE  README.md  grammar.css  grammar_dict_header.html  main.py  pali-grammar.py  pali_grammar.py  pali_grammar_old.py  pyproject.toml
db/: models.py
pali-grammar/: pali-grammar.idx  pali-grammar.ifo  pali-grammar.syn.dz
tools/: goldendict_exporter.py  paths.py
