[project]
name = "pali-grammar"
version = "0.1.0"
description = "Dictionary of Pali grammatical inflections with grammatical symbols, usage, meaning and construction, based on Digital Pali Dictionary"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml>=5.4.0",
    "mako>=1.3.10",
    "pyglossary>=5.0.9",
    "python-idzip>=0.3.9",
    "rich>=13.9.4",
    "sqlalchemy>=2.0.40",
]
